name:                ioref-stable
version:             0.1.0.0
synopsis:            iorefs with a unique stable index
description:         Please see README.md
homepage:            http://github.com/cocreature/ioref-stable#readme
license:             MIT
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           2015
category:            Unknown
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5
